center game at lower aspect ratio. (mobile nav buttons block bottom)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <!--  PAC-MAN™ & ©1980 BANDAI NAMCO Entertainment Inc.  -->
-  <title>Mx PAC PERSON</title>
+  <title>Mx.PAC-PERSON</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <style id="pac-move"></style>
 </head>
@@ -21,740 +21,6 @@
         stroke="#2121FF"></path>
     </svg>
     <!-- Sadly, had to create a wrapper div for the purpose of code folding -->
-    <!-- <div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="pellet">
-        <div></div>
-      </div>
-      <div class="power pellet">
-        <div></div>
-      </div>
-      <div class="power pellet">
-        <div></div>
-      </div>
-      <div class="power pellet">
-        <div></div>
-      </div>
-      <div class="power pellet">
-        <div></div>
-      </div>
-    </div> -->
     <div>
       <div class="pellet" style="transform: translate(calc(2.77778cqh), calc(11.1111cqh));">
         <div></div>
@@ -1497,7 +763,7 @@
         </path>
       </svg>
     </div>
-    
+
   </main>
 
   <script src="script.js"></script>
